# vterm-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  backlog.md  cowork.json  pyproject.toml  skill.toml
.ai/: instructions.md
.github/workflows/: publish.yml  pypi-publish.yml  rust-ci.yml
docs/: AGENT_PATTERNS.md  architecture.md  mcp-bridge.md  protocol.md  schema.json  thinking-plan.md
docs/features/: v0.2.md  v0.3.md  v0.4.md  v0.5.md  v0.6.md  v0.7.md
docs/mcp/: README.md  batch.md  close.md  extract.md  get_architecture.md  get_info.md  get_process_state.md  inspect.md  list_terminals.md  read.md  rust_eval.md  screen_diff.md  spawn.md  wait_until.md  wait_until_stable.md  write.md
examples/: batch_efficiency.py
examples/claude/: README.md  ping_google.md
examples/python_sdk/: ci_github_runner.py  devops_server_health.py  docker_container_debug.py  guardrailed_build.py  terminal_fleet.py  tui_orchestration.py
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
scripts/: baseline_metrics.py  claude_orchestrator.py  discover_tools.py  fluent_fleet_demo.py  gemini_gauntlet.py  generate_graph.ps1  generate_mcp_docs.py  kill_vterm.bat  mcp_doc_tool.py  mcp_stabilizer.py  metrics_viewer.py  reality_check_claude.py  terminal_bridge.py  verify_and_doc.ps1  verify_shm.py
src/: lib.rs
src/protocol/: mod.rs
src/service/: dispatcher.rs  timing.rs  tracing_layer.rs
src/terminal/: instance.rs  mod.rs  prompt.rs  pump.rs
src/window/: mod.rs
tests/: benchmark_execution.ps1  integration_test.rs  playbook_tests.ps1
tests/python_sdk/: test_fastmcp.py  test_mcp.py
vterm/: Cargo.toml  vterm_metrics.jsonl
vterm-ctrl/: main.py
vterm-protocol/: Cargo.toml
vterm-protocol/src/: lib.rs
vterm-python/: Cargo.toml  README.md  pyproject.toml
vterm-python/src/: lib.rs
vterm-python/tests/: test_batch_extraction.py  test_inspect.py  test_ping_fastest.py  test_saturation.py
vterm-python/vterm_python/: GRAPH_REPORT.md  __init__.py  server.py  vterm_python.pyd
vterm/src/: app.rs  client.rs  error.rs  lib.rs  shortcuts.rs  watchdog.rs
vterm/src/client/: windows.rs
vterm/src/protocol/: command.rs  mod.rs
vterm/src/service/: correlation.rs  dispatcher.rs  mod.rs  timing.rs  tracing_layer.rs
vterm/src/session/: mod.rs
vterm/src/terminal/: instance.rs  mod.rs  prompt.rs  pump.rs  shm.rs
vterm/src/window/: mod.rs  stub.rs  windows.rs
vterm/tests/: integration_test.rs  leak_test.rs  mcp_parity.rs  protocol.rs  test_results.md
