[package]
name = "vterm-rs"
version = "0.6.0"
edition = "2024"
license = "MIT"
description = "PTY orchestrator that lets AI agents drive real terminals"

[dependencies]
# core async + serialization
tokio              = { version = "1.40", features = ["full"] }
tokio-util         = { version = "0.7", features = ["codec"] }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
futures-util       = "0.3"

# concurrency primitives
parking_lot        = "0.12"

# pty + terminal emulation
portable-pty       = "0.9"
vt100              = "0.15"
crossterm          = "0.28"

# protocol parsing
regex              = "1.10"

# errors + observability
thiserror          = "1.0"
anyhow             = "1.0"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# command pipeline
tower              = { version = "0.5", features = ["util"] }

# cli
clap               = { version = "4", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows-sys        = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

[dev-dependencies]
serde_json = "1.0"

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"
