[package]
name = "vterm-protocol"
version = "0.7.23"
edition = "2024"
description = "Wire protocol definitions for vterm-rs"
license = "MIT"
repository = "https://github.com/margusmartsepp/vterm-rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
thiserror = "1.0"
tracing = "0.1"

[[bin]]
name = "gen-schema"
path = "src/bin/gen_schema.rs"
