[package]
name = "vterm-python"
version = "0.7.22"
edition = "2021"
description = "High-performance Python SDK for the vterm-rs PTY orchestrator"
license = "MIT"
repository = "https://github.com/margusmartsepp/vterm-rs"

[lib]
name = "vterm_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "anyhow", "abi3-py310"] }
vterm-protocol = { version = "0.7.22", path = "../vterm-protocol" }
vterm-rs = { version = "0.7.22", path = "../vterm" }
tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "time"] }
anyhow = "1.0"
regex = "1.10"
pythonize = "0.22"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
