[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "vterm-rs-python-mcp"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]
dependencies = [
    "fastmcp",
    "pydantic"
]

[project.scripts]
vterm-mcp = "vterm_python.server:main"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "vterm_python.vterm_python"

[dependency-groups]
dev = [
    "maturin>=1.13.1",
]
