[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "vterm-rs-python-mcp"
version = "0.7.22"
description = "High-performance Python SDK for the vterm-rs PTY orchestrator"
readme = "README.md"
authors = [
    { name = "Margus Martsepp", email = "margus@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "fastmcp",
    "pydantic"
]

[project.scripts]
vterm-rs-python-mcp = "vterm_python.server:main"
vterm-mcp = "vterm_python.server:main"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "vterm_python.vterm_python"

[dependency-groups]
dev = [
    "maturin>=1.13.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.5",
    "pytest-benchmark>=4.0",
    "psutil>=5.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
