[package]
name = "vterm-rs"
version = "0.7.9"
edition = "2021"
license = "MIT"
description = "PTY orchestrator that lets AI agents drive real terminals"
repository = "https://github.com/margusmartsepp/vterm-rs"
homepage = "https://github.com/margusmartsepp/vterm-rs"
readme = "../README.md"

[dependencies]
# core async + serialization
tokio              = { version = "1.40", features = ["full"] }
tokio-util         = { version = "0.7", features = ["codec"] }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
futures-util       = "0.3"

# concurrency primitives
parking_lot        = "0.12"

# pty + terminal emulation
portable-pty       = "0.9"
vt100              = "0.15"
crossterm          = "0.28"

# protocol parsing
regex              = "1.10"

# errors + observability
thiserror          = "1.0"
anyhow             = "1.0"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# command pipeline
tower              = { version = "0.5", features = ["util"] }

# cli
clap               = { version = "4", features = ["derive"] }
rmcp = { version = "1.5.0", features = ["server", "macros", "transport-io", "client", "transport-child-process"] }
schemars = "1.2.1"
dashmap = "6.1.0"

[target.'cfg(windows)'.dependencies]
windows-sys        = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

[dev-dependencies]
serde_json = "1.0"

[[bin]]
name = "vterm"
path = "src/bin/vterm.rs"

[[bin]]
name = "vterm-mcp"
path = "src/bin/vterm-mcp.rs"
