[package]
name = "vterm-rs"
version = "0.7.24"
edition = "2021"
license = "MIT"
description = "PTY orchestrator that lets AI agents drive real terminals"
repository = "https://github.com/margusmartsepp/vterm-rs"
homepage = "https://github.com/margusmartsepp/vterm-rs"
readme = "../README.md"

[dependencies]
# core async + serialization
tokio              = { version = "1.40", features = ["full"] }
vterm-protocol     = { version = "0.7.24", path = "../vterm-protocol" }
tokio-util         = { version = "0.7", features = ["codec"] }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
futures-util       = "0.3"
chrono             = { version = "0.4", features = ["serde"] }

# concurrency primitives
parking_lot        = "0.12"

# pty + terminal emulation
portable-pty       = "0.9"
vt100              = "0.15"
crossterm          = "0.28"

# protocol parsing
regex              = "1.10"

# errors + observability
thiserror          = "1.0"
anyhow             = "1.0"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# command pipeline
tower              = { version = "0.5", features = ["util"] }

# cli
clap               = { version = "4", features = ["derive"] }
rmcp = { version = "1.5.0", features = ["server", "macros", "transport-io", "client", "transport-child-process"] }
schemars = "1.2.1"
sysinfo = "0.31"
dashmap = "6.1.0"
rustc-hash = "2.1.2"
comfy-table = "7.1"

[target.'cfg(windows)'.dependencies]
windows-sys        = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Security",
] }

[dev-dependencies]
serde_json = "1.0"

[[bin]]
name = "vterm"
path = "src/bin/vterm.rs"

[[bin]]
name = "vterm-mcp"
path = "src/bin/vterm-mcp.rs"

[[bin]]
name = "vterm-ctrl"
path = "src/bin/vterm-ctrl.rs"
